--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,8 @@
 {
   "name": "lolma-us",
   "dependencies": {
-    "ember": "~2.9.0",
-    "ember-cli-shims": "0.1.3"
+    "ember": "2.10.0-beta.3",
+    "ember-cli-shims": "~0.1.1",
+    "showdown": "^1.5.0"
   }
 }
