--- a/package.json
+++ b/package.json
@@ -21,24 +21,45 @@
   "devDependencies": {
     "broccoli-asset-rev": "^2.4.5",
     "ember-ajax": "^2.4.1",
+    "ember-browserify": "^1.1.13",
     "ember-cli": "2.9.1",
     "ember-cli-app-version": "^2.0.0",
     "ember-cli-babel": "^5.1.7",
     "ember-cli-dependency-checker": "^1.3.0",
+    "ember-cli-eslint": "^3.0.0",
+    "ember-cli-fastboot": "^1.0.0-beta.13",
+    "ember-cli-head": "^0.1.3",
     "ember-cli-htmlbars": "^1.0.10",
     "ember-cli-htmlbars-inline-precompile": "^0.3.3",
     "ember-cli-inject-live-reload": "^1.4.1",
-    "ember-cli-jshint": "^1.0.4",
+    "ember-cli-legacy-blueprints": "https://github.com/lolmaus/ember-cli-legacy-blueprints.git#standardjs",
     "ember-cli-qunit": "^3.0.1",
     "ember-cli-release": "^0.2.9",
+    "ember-cli-showdown": "^2.8.0",
     "ember-cli-sri": "^2.1.0",
+    "ember-cli-staticboot": "^0.1.2",
     "ember-cli-test-loader": "^1.1.0",
     "ember-cli-uglify": "^1.2.0",
-    "ember-data": "^2.9.0",
+    "ember-composable-helpers": "^1.1.2",
+    "ember-data": "2.10.0-beta.2",
     "ember-export-application-global": "^1.0.5",
+    "ember-i18n": "^4.3.2",
     "ember-load-initializers": "^0.5.1",
+    "ember-network": "^0.3.0",
     "ember-resolver": "^2.0.3",
-    "ember-welcome-page": "^1.0.3",
-    "loader.js": "^4.0.10"
-  }
+    "ember-route-action-helper": "^2.0.0",
+    "eslint": "^3.10.2",
+    "eslint-config-standard": "^6.2.1",
+    "eslint-plugin-promise": "^3.3.2",
+    "eslint-plugin-standard": "^2.0.1",
+    "front-matter": "^2.1.0",
+    "js-yaml": "^3.7.0",
+    "loader.js": "^4.0.10",
+    "lodash": "^4.17.2",
+    "showdown": "^1.5.0"
+  },
+
+  "fastbootDependencies": [
+    "showdown"
+  ]
 }
