--- a/package.json
+++ b/package.json
@@ -33,21 +33,26 @@
     "ember-cli-htmlbars-inline-precompile": "^0.3.3",
     "ember-cli-inject-live-reload": "^1.4.1",
     "ember-cli-legacy-blueprints": "https://github.com/lolmaus/ember-cli-legacy-blueprints.git#standardjs",
+    "ember-cli-moment-shim": "^1.3.0",
     "ember-cli-qunit": "^3.0.1",
     "ember-cli-release": "^0.2.9",
-    "ember-cli-showdown": "^2.8.0",
+    "ember-cli-showdown": "https://github.com/lolmaus/ember-cli-showdown.git#issue-34-safe-string",
     "ember-cli-sri": "^2.1.0",
     "ember-cli-staticboot": "^0.1.2",
     "ember-cli-test-loader": "^1.1.0",
     "ember-cli-uglify": "^1.2.0",
     "ember-composable-helpers": "^1.1.2",
+    "ember-computed-template-string": "^0.1.4",
+    "ember-cpm": "^2.1.3",
     "ember-data": "2.10.0-beta.2",
     "ember-export-application-global": "^1.0.5",
     "ember-i18n": "^4.3.2",
     "ember-load-initializers": "^0.5.1",
+    "ember-moment": "https://github.com/stefanpenner/ember-moment.git#ec85b631a3a6451f7a919c76a0f9da85502ff844",
     "ember-network": "^0.3.0",
     "ember-resolver": "^2.0.3",
     "ember-route-action-helper": "^2.0.0",
+    "ember-truth-helpers": "^1.2.0",
     "eslint": "^3.10.2",
     "eslint-config-standard": "^6.2.1",
     "eslint-plugin-promise": "^3.3.2",
@@ -58,7 +63,6 @@
     "lodash": "^4.17.2",
     "showdown": "^1.5.0"
   },
-
   "fastbootDependencies": [
     "showdown"
   ]
