--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "ember-computed-template-string": "^0.1.4",
     "ember-cpm": "^2.1.3",
     "ember-data": "2.10.0-beta.2",
+    "ember-deferred-content": "^0.2.0",
     "ember-export-application-global": "^1.0.5",
     "ember-i18n": "^4.3.2",
     "ember-load-initializers": "^0.5.1",
