--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "ember-network": "^0.3.0",
     "ember-resolver": "^2.0.3",
     "ember-route-action-helper": "^2.0.0",
+    "ember-simple-auth": "^1.1.0",
     "ember-truth-helpers": "^1.2.0",
     "eslint": "^3.10.2",
     "eslint-config-standard": "^6.2.1",
@@ -62,7 +63,8 @@
     "js-yaml": "^3.7.0",
     "loader.js": "^4.0.10",
     "lodash": "^4.17.2",
-    "showdown": "^1.5.0"
+    "showdown": "^1.5.0",
+    "torii": "^0.8.1"
   },
   "fastbootDependencies": [
     "showdown"
