--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "ember-cli-app-version": "^2.0.0",
     "ember-cli-babel": "^5.1.7",
     "ember-cli-dependency-checker": "^1.3.0",
+    "ember-cli-dotenv": "^1.2.0",
     "ember-cli-eslint": "^3.0.0",
     "ember-cli-fastboot": "^1.0.0-beta.13",
     "ember-cli-head": "^0.1.3",
@@ -53,7 +54,7 @@
     "ember-network": "^0.3.0",
     "ember-resolver": "^2.0.3",
     "ember-route-action-helper": "^2.0.0",
-    "ember-simple-auth": "^1.1.0",
+    "ember-simple-auth": "https://github.com/simplabs/ember-simple-auth.git#fastboot",
     "ember-truth-helpers": "^1.2.0",
     "eslint": "^3.10.2",
     "eslint-config-standard": "^6.2.1",
