--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "broccoli-asset-rev": "^2.4.5",
     "ember-ajax": "^2.4.1",
+    "ember-array-computed-macros": "^1.3.0",
     "ember-browserify": "^1.1.13",
     "ember-cli": "2.9.1",
     "ember-cli-app-version": "^2.0.0",
