--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "breakpoint-sass": "^2.7.0",
+    "breakpoint-slicer": "^2.0.0",
     "broccoli-asset-rev": "^2.4.5",
     "ember-ajax": "^2.4.1",
     "ember-array-computed-macros": "^1.3.0",
     "ember-browserify": "^1.1.13",
     "ember-cli": "2.9.1",
     "ember-cli-app-version": "^2.0.0",
+    "ember-cli-autoprefixer": "^0.6.0",
     "ember-cli-babel": "^5.1.7",
     "ember-cli-dependency-checker": "^1.3.0",
     "ember-cli-dotenv": "^1.2.0",
@@ -38,11 +41,13 @@
     "ember-cli-moment-shim": "^1.3.0",
     "ember-cli-qunit": "^3.0.1",
     "ember-cli-release": "^0.2.9",
+    "ember-cli-sass": "^5.6.0",
     "ember-cli-showdown": "https://github.com/lolmaus/ember-cli-showdown.git#issue-34-safe-string",
     "ember-cli-sri": "^2.1.0",
     "ember-cli-staticboot": "^0.1.2",
     "ember-cli-test-loader": "^1.1.0",
     "ember-cli-uglify": "^1.2.0",
+    "ember-cli-webfontloader": "^0.3.1",
     "ember-composable-helpers": "^1.1.2",
     "ember-computed-template-string": "^0.1.4",
     "ember-cpm": "^2.1.3",
@@ -65,6 +70,8 @@
     "js-yaml": "^3.7.0",
     "loader.js": "^4.0.10",
     "lodash": "^4.17.2",
+    "sass-config-manager-mk2": "^1.0.0-alpha.1",
+    "sass-toolkit": "^2.10.0",
     "showdown": "^1.5.0",
     "torii": "^0.8.1"
   },
