--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "ember-cli-autoprefixer": "^0.6.0",
     "ember-cli-babel": "^5.1.7",
     "ember-cli-dependency-checker": "^1.3.0",
+    "ember-cli-document-title": "^0.3.3",
     "ember-cli-dotenv": "^1.2.0",
     "ember-cli-eslint": "^3.0.0",
     "ember-cli-fastboot": "^1.0.0-beta.13",
