--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "ember-resolver": "^2.0.3",
     "ember-route-action-helper": "^2.0.0",
     "ember-simple-auth": "https://github.com/simplabs/ember-simple-auth.git#fastboot",
+    "ember-svg-jar": "0.9.3",
     "ember-truth-helpers": "^1.2.0",
     "eslint": "^3.10.2",
     "eslint-config-standard": "^6.2.1",
