--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "ember-network": "^0.3.0",
     "ember-resolver": "^2.0.3",
     "ember-route-action-helper": "^2.0.0",
+    "ember-scroll-to-mk2": "^1.1.0",
     "ember-simple-auth": "https://github.com/simplabs/ember-simple-auth.git#fastboot",
     "ember-svg-jar": "0.9.3",
     "ember-truth-helpers": "^1.2.0",
