--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "ember-export-application-global": "^1.0.5",
     "ember-i18n": "^4.3.2",
     "ember-load-initializers": "^0.5.1",
+    "ember-metrics": "^0.7.0",
     "ember-moment": "https://github.com/stefanpenner/ember-moment.git#ec85b631a3a6451f7a919c76a0f9da85502ff844",
     "ember-network": "^0.3.0",
     "ember-resolver": "^2.0.3",
