--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "ember-cli-inject-live-reload": "^1.4.1",
     "ember-cli-legacy-blueprints": "https://github.com/lolmaus/ember-cli-legacy-blueprints.git#standardjs",
     "ember-cli-moment-shim": "^1.3.0",
+    "ember-cli-node-modules-to-vendor": "^0.1.1",
     "ember-cli-qunit": "^3.0.1",
     "ember-cli-release": "^0.2.9",
     "ember-cli-sass": "^5.6.0",
@@ -71,12 +72,13 @@
     "eslint-plugin-promise": "^3.3.2",
     "eslint-plugin-standard": "^2.0.1",
     "front-matter": "^2.1.0",
+    "highlight.js": "^9.8.0",
     "js-yaml": "^3.7.0",
     "loader.js": "^4.0.10",
     "lodash": "^4.17.2",
     "sass-config-manager-mk2": "^1.0.0-alpha.1",
     "sass-toolkit": "^2.10.0",
-    "showdown": "^1.5.0",
+    "showdown": "https://github.com/lolmaus/ember-cli-showdown.git#issue-38-github-code-blocks",
     "torii": "^0.8.1"
   },
   "fastbootDependencies": [
