--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "ember-cli-legacy-blueprints": "https://github.com/lolmaus/ember-cli-legacy-blueprints.git#standardjs",
     "ember-cli-moment-shim": "^1.3.0",
     "ember-cli-node-modules-to-vendor": "^0.1.1",
+    "ember-cli-nprogress": "^0.1.2",
     "ember-cli-qunit": "^3.0.1",
     "ember-cli-release": "^0.2.9",
     "ember-cli-sass": "^5.6.0",
