--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "ember-cli-qunit": "^3.0.1",
     "ember-cli-release": "^0.2.9",
     "ember-cli-sass": "^5.6.0",
-    "ember-cli-showdown": "https://github.com/lolmaus/ember-cli-showdown.git#issue-34-safe-string",
+    "ember-cli-showdown": "^2.9.0",
     "ember-cli-sri": "^2.1.0",
     "ember-cli-staticboot": "^0.1.3",
     "ember-cli-test-loader": "^1.1.0",
@@ -80,7 +80,7 @@
     "lodash": "^4.17.2",
     "sass-config-manager-mk2": "^1.0.0-alpha.1",
     "sass-toolkit": "^2.10.0",
-    "showdown": "https://github.com/lolmaus/ember-cli-showdown.git#issue-38-github-code-blocks",
+    "showdown": "^1.5.1",
     "torii": "^0.8.1"
   },
   "fastbootDependencies": [
