--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,8 @@
 {
   "name": "lolma-us",
   "dependencies": {
-    "ember": "2.10.0-beta.3",
-    "ember-cli-shims": "~0.1.1",
+    "ember": "~2.10.0",
+    "ember-cli-shims": "0.1.3",
     "showdown": "^1.5.1",
     "nprogress": "alexlafroscia/nprogress#allow-alternate-scheduler"
   }
