--- a/package.json
+++ b/package.json
@@ -14,21 +14,21 @@
   },
   "repository": "",
   "engines": {
-    "node": ">= 0.12.0"
+    "node": ">= 6"
   },
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "breakpoint-sass": "^2.7.0",
+    "breakpoint-sass": "^2.7.1",
     "breakpoint-slicer": "^2.0.0",
     "broccoli-asset-rev": "^2.4.5",
-    "ember-ajax": "^2.4.1",
+    "ember-ajax": "^2.5.3",
     "ember-array-computed-macros": "^1.3.0",
     "ember-browserify": "^1.1.13",
-    "ember-cli": "2.9.1",
+    "ember-cli": "2.10.0",
     "ember-cli-app-version": "^2.0.0",
     "ember-cli-autoprefixer": "^0.6.0",
-    "ember-cli-babel": "^5.1.7",
+    "ember-cli-babel": "^5.2.1",
     "ember-cli-dependency-checker": "^1.3.0",
     "ember-cli-document-title": "^0.3.3",
     "ember-cli-dotenv": "^1.2.0",
@@ -40,10 +40,10 @@
     "ember-cli-htmlbars-inline-precompile": "^0.3.3",
     "ember-cli-inject-live-reload": "^1.4.1",
     "ember-cli-legacy-blueprints": "https://github.com/lolmaus/ember-cli-legacy-blueprints.git#standardjs",
-    "ember-cli-moment-shim": "^1.3.0",
+    "ember-cli-moment-shim": "^3.0.1",
     "ember-cli-node-modules-to-vendor": "^0.1.1",
     "ember-cli-nprogress": "^0.1.2",
-    "ember-cli-qunit": "^3.0.1",
+    "ember-cli-qunit": "^3.0.4",
     "ember-cli-release": "^0.2.9",
     "ember-cli-sass": "^5.6.0",
     "ember-cli-showdown": "^2.9.0",
@@ -54,32 +54,32 @@
     "ember-composable-helpers": "^1.1.2",
     "ember-computed-template-string": "^0.1.4",
     "ember-cpm": "^2.1.3",
-    "ember-data": "2.10.0-beta.2",
+    "ember-data": "^2.10.0",
     "ember-deferred-content": "^0.2.0",
     "ember-disqus": "^0.2.0",
     "ember-export-application-global": "^1.0.5",
     "ember-i18n": "^4.3.2",
     "ember-load-initializers": "^0.5.1",
     "ember-metrics": "^0.7.0",
-    "ember-moment": "https://github.com/stefanpenner/ember-moment.git#ec85b631a3a6451f7a919c76a0f9da85502ff844",
-    "ember-network": "^0.3.0",
+    "ember-moment": "^7.1.0",
+    "ember-network": "^0.3.1",
     "ember-resolver": "^2.0.3",
-    "ember-route-action-helper": "^2.0.0",
+    "ember-route-action-helper": "^2.0.1",
     "ember-scroll-to-mk2": "^1.1.0",
-    "ember-simple-auth": "https://github.com/simplabs/ember-simple-auth.git#fastboot",
+    "ember-simple-auth": "^1.2.0-beta.1",
     "ember-svg-jar": "0.9.3",
     "ember-truth-helpers": "^1.2.0",
-    "eslint": "^3.10.2",
+    "eslint": "^3.12.2",
     "eslint-config-standard": "^6.2.1",
     "eslint-plugin-promise": "^3.3.2",
     "eslint-plugin-standard": "^2.0.1",
     "front-matter": "^2.1.0",
-    "highlight.js": "^9.8.0",
+    "highlight.js": "^9.9.0",
     "js-yaml": "^3.7.0",
     "loader.js": "^4.0.10",
     "lodash": "^4.17.2",
     "sass-config-manager-mk2": "^1.0.0-alpha.1",
-    "sass-toolkit": "^2.10.0",
+    "sass-toolkit": "^2.10.2",
     "showdown": "^1.5.1",
     "torii": "^0.8.1"
   },
