--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "ember-cli-eslint": "^3.0.0",
     "ember-cli-fastboot": "^1.0.0-beta.13",
     "ember-cli-favicon": "^1.0.0-beta.4",
+    "ember-cli-file-creator": "https://github.com/lolmaus/ember-cli-file-creator.git#any-tree",
     "ember-cli-head": "^0.1.3",
     "ember-cli-htmlbars": "^1.0.10",
     "ember-cli-htmlbars-inline-precompile": "^0.3.3",
@@ -48,7 +49,6 @@
     "ember-cli-sass": "^5.6.0",
     "ember-cli-showdown": "^2.9.0",
     "ember-cli-sri": "^2.1.0",
-    "ember-cli-staticboot": "^0.1.3",
     "ember-cli-test-loader": "^1.1.0",
     "ember-cli-uglify": "^1.2.0",
     "ember-composable-helpers": "^1.1.2",
