--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "ember-cli-sass": "^5.6.0",
     "ember-cli-showdown": "^2.9.0",
     "ember-cli-sri": "^2.1.0",
+    "ember-cli-staticboot": "^0.1.3",
     "ember-cli-test-loader": "^1.1.0",
     "ember-cli-uglify": "^1.2.0",
     "ember-composable-helpers": "^1.1.2",
