--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "ember-ajax": "^2.5.3",
     "ember-array-computed-macros": "^1.3.0",
     "ember-browserify": "^1.1.13",
-    "ember-cli": "2.10.0",
+    "ember-cli": "2.11.0",
     "ember-cli-app-version": "^2.0.0",
     "ember-cli-autoprefixer": "^0.6.0",
     "ember-cli-babel": "^5.2.1",
@@ -37,7 +37,7 @@
     "ember-cli-favicon": "^1.0.0-beta.4",
     "ember-cli-file-creator": "https://github.com/lolmaus/ember-cli-file-creator.git#any-tree",
     "ember-cli-head": "^0.1.3",
-    "ember-cli-htmlbars": "^1.0.10",
+    "ember-cli-htmlbars": "^1.1.1",
     "ember-cli-htmlbars-inline-precompile": "^0.3.3",
     "ember-cli-inject-live-reload": "^1.4.1",
     "ember-cli-legacy-blueprints": "https://github.com/lolmaus/ember-cli-legacy-blueprints.git#standardjs",
@@ -46,28 +46,30 @@
     "ember-cli-nprogress": "^0.1.2",
     "ember-cli-qunit": "^3.0.4",
     "ember-cli-release": "^0.2.9",
-    "ember-cli-sass": "^5.6.0",
+    "ember-cli-sass": "^6.1.1",
+    "ember-cli-shims": "^1.0.2",
     "ember-cli-showdown": "^2.9.0",
     "ember-cli-sri": "^2.1.0",
     "ember-cli-staticboot": "^0.1.3",
     "ember-cli-test-loader": "^1.1.0",
     "ember-cli-uglify": "^1.2.0",
-    "ember-composable-helpers": "^1.1.2",
+    "ember-composable-helpers": "^2.0.0",
     "ember-computed-template-string": "^0.1.4",
-    "ember-cpm": "^2.1.3",
-    "ember-data": "^2.10.0",
+    "ember-cpm": "^3.0.0",
+    "ember-data": "~2.11.0",
     "ember-deferred-content": "^0.2.0",
-    "ember-disqus": "^0.2.0",
+    "ember-disqus": "lolmaus/ember-disqus#disqusUrlPatch",
     "ember-export-application-global": "^1.0.5",
     "ember-i18n": "^4.3.2",
-    "ember-load-initializers": "^0.5.1",
-    "ember-metrics": "^0.7.0",
+    "ember-load-initializers": "^0.6.0",
+    "ember-metrics": "~0.8.1",
     "ember-moment": "^7.1.0",
     "ember-network": "^0.3.1",
     "ember-resolver": "^2.0.3",
     "ember-route-action-helper": "^2.0.1",
     "ember-scroll-to-mk2": "^1.1.0",
     "ember-simple-auth": "^1.2.0-beta.1",
+    "ember-source": "~2.11.0",
     "ember-svg-jar": "0.9.3",
     "ember-truth-helpers": "^1.2.0",
     "eslint": "^3.12.2",
