--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "broccoli-asset-rev": "^2.4.5",
     "ember-ajax": "^2.5.3",
     "ember-array-computed-macros": "^1.3.0",
+    "ember-awesome-macros": "^0.31.1",
     "ember-browserify": "^1.1.13",
     "ember-cli": "2.11.0",
     "ember-cli-app-version": "^2.0.0",
@@ -55,7 +56,6 @@
     "ember-cli-uglify": "^1.2.0",
     "ember-composable-helpers": "^2.0.0",
     "ember-computed-template-string": "^0.1.4",
-    "ember-cpm": "^3.0.0",
     "ember-data": "~2.11.0",
     "ember-deferred-content": "^0.2.0",
     "ember-disqus": "lolmaus/ember-disqus#disqusUrlPatch",
