--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "ember-array-computed-macros": "^1.3.0",
     "ember-awesome-macros": "^0.31.1",
     "ember-browserify": "^1.1.13",
-    "ember-cli": "2.11.0",
+    "ember-cli": "2.11.1",
     "ember-cli-app-version": "^2.0.0",
     "ember-cli-autoprefixer": "^0.6.0",
     "ember-cli-babel": "^5.2.1",
@@ -39,7 +39,7 @@
     "ember-cli-file-creator": "https://github.com/lolmaus/ember-cli-file-creator.git#any-tree",
     "ember-cli-head": "^0.1.3",
     "ember-cli-htmlbars": "^1.1.1",
-    "ember-cli-htmlbars-inline-precompile": "^0.3.3",
+    "ember-cli-htmlbars-inline-precompile": "^0.3.6",
     "ember-cli-inject-live-reload": "^1.4.1",
     "ember-cli-legacy-blueprints": "https://github.com/lolmaus/ember-cli-legacy-blueprints.git#standardjs",
     "ember-cli-moment-shim": "^3.0.1",
@@ -58,7 +58,7 @@
     "ember-computed-template-string": "^0.1.4",
     "ember-data": "~2.11.0",
     "ember-deferred-content": "^0.2.0",
-    "ember-disqus": "lolmaus/ember-disqus#disqusUrlPatch",
+    "ember-disqus": "sir-dunxalot/ember-disqus#ember-cli-upgrade",
     "ember-export-application-global": "^1.0.5",
     "ember-i18n": "^4.3.2",
     "ember-load-initializers": "^0.6.0",
@@ -68,7 +68,7 @@
     "ember-resolver": "^2.0.3",
     "ember-route-action-helper": "^2.0.1",
     "ember-scroll-to-mk2": "^1.1.0",
-    "ember-simple-auth": "^1.2.0-beta.1",
+    "ember-simple-auth": "1.2.0",
     "ember-source": "~2.11.0",
     "ember-svg-jar": "0.9.3",
     "ember-truth-helpers": "^1.2.0",
