--- a/package.json
+++ b/package.json
@@ -36,7 +36,6 @@
     "ember-cli-eslint": "^3.0.0",
     "ember-cli-fastboot": "^1.0.0-beta.13",
     "ember-cli-favicon": "^1.0.0-beta.4",
-    "ember-cli-file-creator": "https://github.com/lolmaus/ember-cli-file-creator.git#any-tree",
     "ember-cli-head": "^0.1.3",
     "ember-cli-htmlbars": "^1.1.1",
     "ember-cli-htmlbars-inline-precompile": "^0.3.6",
@@ -76,7 +75,9 @@
     "eslint-config-standard": "^6.2.1",
     "eslint-plugin-promise": "^3.3.2",
     "eslint-plugin-standard": "^2.0.1",
+    "express": "^4.14.1",
     "front-matter": "^2.1.0",
+    "fs-extra": "^2.0.0",
     "highlight.js": "^9.9.0",
     "js-yaml": "^3.7.0",
     "loader.js": "^4.0.10",
@@ -89,5 +90,10 @@
   },
   "fastbootDependencies": [
     "showdown"
-  ]
+  ],
+  "ember-addon": {
+    "paths": [
+      "lib/content-server"
+    ]
+  }
 }
