--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "bluebird": "^3.4.7",
     "breakpoint-sass": "^2.7.1",
     "breakpoint-slicer": "^2.0.0",
     "broccoli-asset-rev": "^2.4.5",
@@ -31,6 +32,9 @@
     "ember-cli-autoprefixer": "^0.6.0",
     "ember-cli-babel": "^5.2.1",
     "ember-cli-dependency-checker": "^1.3.0",
+    "ember-cli-deploy": "^1.0.0",
+    "ember-cli-deploy-build": "^0.1.1",
+    "ember-cli-deploy-ghpages": "^0.2.0",
     "ember-cli-document-title": "^0.3.3",
     "ember-cli-dotenv": "^1.2.0",
     "ember-cli-eslint": "^3.0.0",
@@ -82,6 +86,7 @@
     "js-yaml": "^3.7.0",
     "loader.js": "^4.0.10",
     "lodash": "^4.17.2",
+    "recursive-readdir": "^2.1.1",
     "rss": "^1.2.1",
     "sass-config-manager-mk2": "^1.0.0-alpha.1",
     "sass-toolkit": "^2.10.2",
@@ -93,7 +98,8 @@
   ],
   "ember-addon": {
     "paths": [
-      "lib/content-server"
+      "lib/content-server",
+      "lib/ember-cli-deploy-manipulate"
     ]
   }
 }
