--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "breakpoint-sass": "^2.7.1",
     "breakpoint-slicer": "^2.0.0",
     "broccoli-asset-rev": "^2.4.5",
-    "ember-ajax": "^2.5.3",
     "ember-array-computed-macros": "^1.3.0",
     "ember-awesome-macros": "^0.31.1",
     "ember-browserify": "^1.1.13",
@@ -86,6 +85,7 @@
     "js-yaml": "^3.7.0",
     "loader.js": "^4.0.10",
     "lodash": "^4.17.2",
+    "node-static": "^0.7.10",
     "recursive-readdir": "^2.1.1",
     "rss": "^1.2.1",
     "sass-config-manager-mk2": "^1.0.0-alpha.1",
