--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "ember-cli-dotenv": "^2.0.0",
     "ember-cli-eslint": "^4.2.1",
     "ember-cli-fastboot": "^1.1.0",
+    "ember-cli-favicon": "^1.0.0-beta.4",
     "ember-cli-head": "^0.4.0",
     "ember-cli-htmlbars": "^2.0.1",
     "ember-cli-htmlbars-inline-precompile": "^1.0.0",
