--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "ember-metrics": "^0.12.1",
     "ember-moment": "^7.5.0",
     "ember-resolver": "^4.0.0",
+    "ember-rollbar-client": "^0.5.1",
     "ember-route-action-helper": "^2.0.6",
     "ember-scroll-to-mk2": "^2.0.0",
     "ember-simple-auth": "^1.4.0",
