--- a/package.json
+++ b/package.json
@@ -14,33 +14,84 @@
     "build": "ember build --environment=production",
     "lint": "npm-run-all --aggregate-output --continue-on-error --parallel \"lint:!(fix)\"",
     "lint:fix": "npm-run-all --aggregate-output --continue-on-error --parallel lint:*:fix",
-    "lint:hbs": "ember-template-lint .",
-    "lint:hbs:fix": "ember-template-lint . --fix",
-    "lint:js": "eslint . --cache",
-    "lint:js:fix": "eslint . --fix",
+    "lint:etl": "ember-template-lint .",
+    "lint:etl:fix": "ember-template-lint . --fix",
+    "lint:eslint": "eslint . --cache",
+    "lint:eslint:fix": "eslint . --fix",
+    "lint:tsc": "tsc --noEmit",
     "start": "ember serve",
     "test": "npm-run-all lint test:*",
-    "test:ember": "ember test"
+    "test:ember": "ember test",
+    "prepare": "husky install"
   },
   "devDependencies": {
     "@ember/optional-features": "^2.0.0",
     "@ember/test-helpers": "^2.6.0",
     "@embroider/compat": "^1.5.0",
     "@embroider/core": "^1.5.0",
+    "@embroider/macros": "^1.6.0",
     "@embroider/webpack": "^1.5.0",
     "@glimmer/component": "^1.0.4",
     "@glimmer/tracking": "^1.0.4",
+    "@types/chai": "^4.3.1",
+    "@types/chai-as-promised": "^7.1.5",
+    "@types/chai-dom": "^0.0.13",
+    "@types/ember": "^4.0.0",
+    "@types/ember__application": "^4.0.0",
+    "@types/ember__component": "^4.0.8",
+    "@types/ember__controller": "^4.0.0",
+    "@types/ember__debug": "^4.0.1",
+    "@types/ember__engine": "^4.0.0",
+    "@types/ember__error": "^4.0.0",
+    "@types/ember__object": "^4.0.2",
+    "@types/ember__polyfills": "^4.0.0",
+    "@types/ember__routing": "^4.0.5",
+    "@types/ember__runloop": "^4.0.1",
+    "@types/ember__service": "^4.0.0",
+    "@types/ember__string": "^3.0.9",
+    "@types/ember__template": "^4.0.0",
+    "@types/ember__test": "^4.0.0",
+    "@types/ember__test-helpers": "^2.6.1",
+    "@types/ember__utils": "^4.0.0",
+    "@types/ember-data": "^4.0.0",
+    "@types/ember-data__adapter": "^4.0.0",
+    "@types/ember-data__model": "^4.0.0",
+    "@types/ember-data__serializer": "^4.0.0",
+    "@types/ember-data__store": "^4.0.0",
+    "@types/ember-qunit": "^5.0.0",
+    "@types/ember-resolver": "^5.0.11",
+    "@types/ember-test-helpers": "^1.0.11",
+    "@types/ember-testing-helpers": "^0.0.4",
+    "@types/faker": "^6.6.9",
+    "@types/htmlbars-inline-precompile": "^3.0.0",
+    "@types/lodash": "^4.14.182",
+    "@types/qunit": "^2.11.3",
+    "@types/rsvp": "^4.0.4",
+    "@types/sinon": "^10.0.11",
+    "@types/sinon-chai": "^3.2.8",
+    "@types/yadda": "^2.0.2",
+    "@typescript-eslint/eslint-plugin": "^5.23.0",
+    "@typescript-eslint/parser": "^5.23.0",
     "babel-eslint": "^10.1.0",
     "broccoli-asset-rev": "^3.0.0",
+    "chai": "^4.3.6",
+    "chai-as-promised": "^7.1.1",
+    "chai-dom": "^1.11.0",
+    "cross-env": "^7.0.3",
     "ember-auto-import": "^2.4.1",
     "ember-cli": "~4.3.0",
     "ember-cli-app-version": "^5.0.0",
     "ember-cli-babel": "^7.26.11",
     "ember-cli-dependency-checker": "^3.2.0",
+    "ember-cli-dotenv": "^3.1.0",
+    "ember-cli-favicon": "^3.0.0",
     "ember-cli-htmlbars": "^6.0.1",
     "ember-cli-inject-live-reload": "^2.1.0",
+    "ember-cli-sass": "^11.0.1",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-terser": "^4.0.2",
+    "ember-cli-typescript": "^3.0.0",
+    "ember-cli-typescript-blueprints": "^3.0.0",
     "ember-data": "~4.3.0",
     "ember-export-application-global": "^2.0.1",
     "ember-fetch": "^8.1.1",
@@ -50,18 +101,32 @@
     "ember-resolver": "^8.0.3",
     "ember-source": "~4.3.0",
     "ember-template-lint": "^4.3.0",
+    "ember-truth-helpers": "^3.0.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-import-resolver-typescript": "^2.7.1",
     "eslint-plugin-ember": "^10.5.9",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-json": "^3.1.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-qunit": "^7.2.0",
+    "faker": "^6.6.6",
+    "husky": "^8.0.1",
+    "lint-staged": "^12.4.1",
     "loader.js": "^4.7.0",
+    "lodash": "^4.17.21",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.6.1",
+    "prettier": "^2.6.2",
     "qunit": "^2.18.0",
     "qunit-dom": "^2.0.0",
-    "webpack": "^5.70.0"
+    "sass": "^1.51.0",
+    "sinon": "^14.0.0",
+    "sinon-chai": "^3.7.0",
+    "typescript": "^4.6.4",
+    "webpack": "^5.70.0",
+    "yadda": "^2.2.0"
   },
   "engines": {
     "node": "12.* || 14.* || >= 16"
